Ticket 1 erledigt. Voting geht jetzt sowohl Landscape als auch Portrait

--- a/democlient/res/layout-land/client.xml
+++ b/democlient/res/layout-land/client.xml
@@ -52,4 +52,10 @@
         android:layout_height="wrap_content"
         android:layout_margin="10dp" />
 
+    <Button
+        android:text="@string/switch_orientation"
+        android:onClick="changeScreenOrientation"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content" />
+
 </LinearLayout>
