--- a/democlient/res/layout/client.xml
+++ b/democlient/res/layout/client.xml
@@ -41,5 +41,9 @@
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_margin="10dp" />
-
+    <Button
+        android:text="@string/switch_orientation"
+        android:onClick="changeScreenOrientation"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content" />
 </LinearLayout>
