--- a/democlient/res/layout/client.xml
+++ b/democlient/res/layout/client.xml
@@ -7,7 +7,7 @@
     <LinearLayout
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:layout_weight="3"
+        android:layout_weight="4"
         android:orientation="vertical" >
 
         <Gallery
@@ -15,11 +15,11 @@
             android:layout_width="fill_parent"
             android:layout_height="wrap_content" />
 
-        <ImageSwitcher
+        <WebView
             android:id="@+id/image_switcher"
             android:layout_width="fill_parent"
             android:layout_height="fill_parent" >
-        </ImageSwitcher>
+        </WebView>
     </LinearLayout>
 
     <LinearLayout
@@ -31,10 +31,10 @@
         <TextView
             android:id="@+id/percentTextView"
             android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="fill_parent"
             android:layout_weight="1"
-            android:textSize="24dp"
-            android:gravity="center"/>
+            android:gravity="center"
+            android:textSize="24dp" />
 
         <SeekBar
             android:id="@+id/slide_seekBar"
