Implementiere das Laden der Daten mit Hilfe von Relationen, so dass der Client sich untergeordnete Listen automatisch ziehen kann. Bis jetzt ist das Laden der Daten bis zu den Question-Options implementiert.
View für Teilnehmer (Attendee) und Leiter (Chair) zeigen nun die über den Service geladenen Daten an.

--- a/moodserver/templates/groupmood/meeting_detail.html
+++ b/moodserver/templates/groupmood/meeting_detail.html
@@ -34,10 +34,10 @@
 
 <h2 id="qr-attendees">QRCode für Meeting-Teilnehmer</h2>
 <div>
-	<img src="http://chart.apis.google.com/chart?chs=400x400&amp;chld=H&amp;cht=qr&amp;chl={{ attendeeAppURL|iriencode }}" alt="QRCode für Meeting-Teilnehmer" style="width: 100%;" />
+	<img src="http://chart.apis.google.com/chart?chs=400x400&amp;chld=H&amp;cht=qr&amp;chl={{ attendeeAppURL|iriencode }}" alt="QRCode für Meeting-Teilnehmer" />
 </div>
 <h2 id="qr-chair">QRCode für den Meeting-Leiter</h2>
 <div>
-	<img src="http://chart.apis.google.com/chart?chs=400x400&amp;chld=H&amp;cht=qr&amp;chl={{ chairAppURL|iriencode }}" alt="QRCode für den Meeting-Leiter" style="width: 100%;" />
+	<img src="http://chart.apis.google.com/chart?chs=400x400&amp;chld=H&amp;cht=qr&amp;chl={{ chairAppURL|iriencode }}" alt="QRCode für den Meeting-Leiter" />
 </div>
 {% endblock %}
