--- a/moodserver/templates/groupmood/question_detail.html
+++ b/moodserver/templates/groupmood/question_detail.html
@@ -32,7 +32,7 @@
 	{% endif %}
 </dl>
 {% if question.type == "range" %}
-<form method="POST" action="/groupmood/question/{{ question.id }}/answer">
+<form method="POST" action="/groupmood/question/{{ question.id }}/answers">
     <input type="range" min="{{ question.getMin }}" max="{{ question.getMax }}" name="answer" />
     <button type="submit">absenden</button>
 </form>
