Logo auf dem Start-Screen dazu. Behebe Crash wenn nichts, oder keine GroupMood-URL gescannt wurde.

--- a/moodclient/res/layout/chair.xml
+++ b/moodclient/res/layout/chair.xml
@@ -8,7 +8,7 @@
         android:id="@+id/textView1"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:text="Leiter"
+        android:text="@string/chair"
         android:textAppearance="?android:attr/textAppearanceLarge" />
 
     <WebView
