--- a/moodclient/res/layout-land/main.xml
+++ b/moodclient/res/layout-land/main.xml
@@ -2,24 +2,25 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    android:orientation="vertical" >
+    android:orientation="vertical"
+    android:gravity="center"
+     >
 
     <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="150dp"
+        android:layout_height="100dp"
         android:contentDescription="@string/app_name"
         android:src="@drawable/logo" />
 
     <TextView
-        android:layout_width="fill_parent"
+        android:layout_width="300dp"
         android:layout_height="wrap_content"
-        android:text="@string/intro"
-        android:layout_margin="10dp" 
-        />
+        android:layout_margin="10dp"
+        android:text="@string/intro" />
 
     <Button
         android:id="@+id/scan_button"
-        android:layout_width="fill_parent"
+        android:layout_width="300dp"
         android:layout_height="wrap_content"
         android:text="@string/scan" />
 
