--- a/moodclient/res/layout/attendee.xml
+++ b/moodclient/res/layout/attendee.xml
@@ -8,7 +8,7 @@
         android:id="@+id/textView1"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:text="Teilnehmer"
+        android:text="@string/attendee"
         android:textAppearance="?android:attr/textAppearanceLarge" />
 
     <WebView
