--- a/democlient/res/layout-land/gallery.xml
+++ b/democlient/res/layout-land/gallery.xml
@@ -8,7 +8,7 @@
         android:id="@+id/vertical_list_view"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
-        android:layout_weight="4" >
+        android:layout_weight="5" >
     </ListView>
 
     <LinearLayout
@@ -17,34 +17,50 @@
         android:layout_weight="1"
         android:orientation="vertical" >
 
-        <WebView
-            android:id="@+id/image_tall"
-            android:layout_width="fill_parent"
-            android:layout_height="fill_parent"
-            android:layout_weight="1"
-            android:background="@android:color/black"
-            android:fitsSystemWindows="true" >
-        </WebView>
-
         <LinearLayout
             android:layout_width="fill_parent"
             android:layout_height="fill_parent"
-            android:layout_weight="2" 
-            android:orientation="vertical"
-            android:padding="5dp">
+            android:layout_weight="1"
+            android:orientation="horizontal" >
 
-            <TextView
-                android:id="@+id/percentage"
+            <FrameLayout
+                android:id="@+id/webview_container"
                 android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
-                android:gravity="center_horizontal"
-                android:text="DUMMY TEXT" />
+                android:layout_height="fill_parent"
+                android:layout_weight="1" >
+
+                <WebView
+                    android:id="@+id/image_tall"
+                    android:layout_width="fill_parent"
+                    android:layout_height="fill_parent"
+                    android:background="@android:color/black"
+                    android:fitsSystemWindows="true"
+                    android:scrollbars="none" >
+                </WebView>
+            </FrameLayout>
 
             <uk.co.jasonfry.android.tools.ui.SwipeView
                 android:id="@+id/swipe_view"
                 android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="fill_parent"
+                android:layout_weight="1"
                 android:gravity="center_horizontal" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
+            android:layout_weight="1"
+            android:orientation="vertical"
+            android:padding="5dp" >
+
+            <FrameLayout
+                android:layout_width="fill_parent"
+                android:layout_height="fill_parent"
+                android:layout_weight="1"
+                android:orientation="vertical"
+                android:padding="5dp" >
+            </FrameLayout>
 
             <uk.co.jasonfry.android.tools.ui.PageControl
                 android:id="@+id/page_control"
