--- a/moodclient/res/layout/chair.xml
+++ b/moodclient/res/layout/chair.xml
@@ -4,6 +4,13 @@
     android:layout_height="fill_parent"
     android:orientation="vertical" >
 
+ 	<ProgressBar 
+    	android:layout_height="wrap_content" 
+    	style="?android:attr/progressBarStyleHorizontal" 
+    	android:id="@+id/progressBar" 
+    	android:layout_width="fill_parent"
+    	/>
+    	
     <TextView
         android:id="@+id/textView1"
         android:layout_width="fill_parent"
