--- a/moodclient/res/layout/attendee.xml
+++ b/moodclient/res/layout/attendee.xml
@@ -7,7 +7,7 @@
     <ProgressBar 
     	android:layout_height="wrap_content" 
     	style="?android:attr/progressBarStyleHorizontal" 
-    	android:id="@+id/progressBar" 
+    	android:id="@+id/groupMood_progressBar" 
     	android:layout_width="fill_parent"
     	/>
     	
@@ -17,7 +17,7 @@
 	    android:orientation="vertical" >
 	    
 	    <TextView
-	        android:id="@+id/meetingName"
+	        android:id="@+id/groupMood_meetingName"
 	        android:layout_width="fill_parent"
 	        android:layout_height="wrap_content"
 	        android:text="{meeting.name}"
@@ -30,13 +30,13 @@
 		    android:orientation="vertical" >
 		
 		   	<com.devsmart.android.ui.HorizontalListView
-		        android:id="@+id/gallery"
+		        android:id="@+id/groupMood_gallery"
 		        android:layout_width="fill_parent"
 		        android:layout_height="100dp"
 		        />
 		
 		    <WebView
-		        android:id="@+id/detailWebView"
+		        android:id="@+id/groupMood_detailWebView"
 		        android:layout_width="fill_parent"
 		        android:layout_height="fill_parent"
 		        />
