--- a/moodclient/res/layout/gallery_item_image.xml
+++ b/moodclient/res/layout/gallery_item_image.xml
@@ -5,7 +5,7 @@
     android:orientation="vertical" >
 
     <ImageView
-        android:id="@+id/image"
+        android:id="@+id/groupMood_image"
         android:layout_width="100dp"
         android:layout_height="100dp"
         android:scaleType="fitXY" 
