--- a/moodclient/res/layout/gallery_item_text.xml
+++ b/moodclient/res/layout/gallery_item_text.xml
@@ -5,7 +5,7 @@
     android:orientation="vertical" >
 
    <TextView
-        android:id="@+id/name"
+        android:id="@+id/groupMood_name"
         android:layout_width="100dp"
         android:layout_height="100dp"
         android:text="{item.name}"
