--- a/moodclient/res/layout/topic_questions.xml
+++ b/moodclient/res/layout/topic_questions.xml
@@ -4,46 +4,40 @@
     android:layout_height="fill_parent"
     android:orientation="vertical" >
 
-    <LinearLayout
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
-        android:layout_weight="2"
-        android:orientation="vertical"
-        android:weightSum="2" >
-
         <TextView
-            android:id="@+id/groupMood_topicName"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:text="{topic.name}"
-            android:textAppearance="?android:attr/textAppearanceMedium" />
+           android:id="@+id/groupMood_topicName"
+           android:layout_width="fill_parent"
+           android:layout_height="wrap_content"
+           android:text="{topic.name}"
+           android:textAppearance="?android:attr/textAppearanceLarge"
+           android:background="@drawable/bg_blue" 
+           android:layout_marginTop="2dp"
+           android:layout_marginBottom="2dp"
+           android:padding="5dp"
+           />
 
         <uk.co.jasonfry.android.tools.ui.SwipeView
             android:id="@+id/groupMood_questionsSwipe"
             android:layout_width="fill_parent"
-            android:layout_height="fill_parent"
-            android:layout_weight="1"
-            android:gravity="center_horizontal" >
-
+            android:layout_height="100dp"
+            android:background="@drawable/bg_yellow"
+            >
             <!-- Die Swipe-View enthält die Anzeige der Fragen: question_name.xml -->
         </uk.co.jasonfry.android.tools.ui.SwipeView>
-
+    
+    	<uk.co.jasonfry.android.tools.ui.PageControl
+	        android:id="@+id/groupMood_questionsSwipePager"
+	        android:layout_width="fill_parent"
+	        android:layout_height="wrap_content"
+	        android:gravity="center_horizontal"
+	        android:orientation="horizontal" />
+	        
         <LinearLayout
             android:id="@+id/groupMood_questionsActions"
             android:layout_width="fill_parent"
-            android:layout_height="fill_parent"
-            android:layout_weight="1"
+            android:layout_height="wrap_content"
             android:orientation="vertical" >
 
             <!-- Hier rein werden die Antwort-Möglichkeiten gerendert: question_action.xml -->
         </LinearLayout>
-    </LinearLayout>
-
-    <uk.co.jasonfry.android.tools.ui.PageControl
-        android:id="@+id/groupMood_questionsSwipePager"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:gravity="center_horizontal"
-        android:orientation="horizontal" />
-
 </LinearLayout>
