Fixe Absturz durch Memory-Leak mit Bilder-Gallery. Rotation funktioniert jetzt auch ohne dass der Dialog wieder kommt.

--- a/moodclient/res/layout/question_action.xml
+++ b/moodclient/res/layout/question_action.xml
@@ -23,7 +23,7 @@
 		        android:id="@+id/groupMood_questionActionMinLabel"
 		        android:layout_width="wrap_content"
 		        android:layout_height="wrap_content"
-		        android:gravity="center"
+		        android:gravity="left"
 		        android:text="{minLabel}"
 		        android:textAppearance="?android:attr/textAppearanceSmall"
 		        android:textColor="@android:color/white"
@@ -50,7 +50,7 @@
 		        android:id="@+id/groupMood_questionActionMaxLabel"
 		        android:layout_width="wrap_content"
 		        android:layout_height="wrap_content"
-		        android:gravity="center"
+		        android:gravity="right"
 		        android:text="{maxLabel}"
 		        android:textAppearance="?android:attr/textAppearanceSmall"
 		        android:textColor="@android:color/white" 
