--- a/moodclient/res/layout/topic_item.xml
+++ b/moodclient/res/layout/topic_item.xml
@@ -9,6 +9,7 @@
         android:layout_width="94dp"
         android:layout_height="94dp"
         android:layout_marginTop="2dp"
+        android:layout_marginRight="2dp"
         android:background="@drawable/bg_blue"
         android:gravity="center"
         android:text="{item.name}"
@@ -20,6 +21,7 @@
         android:layout_width="94dp"
         android:layout_height="94dp"
         android:layout_marginTop="2dp"
+        android:layout_marginRight="2dp"
         android:scaleType="fitXY" />
 
 </LinearLayout>
